# Sustesh_EE211_SLAM_ROS2

./: README.md  map.pgm  map.yaml  启动指南.md
install/EI_Final_Project/lib/EI_Final_Project/: map_saver_node
install/EI_Final_Project/share/EI_Final_Project/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ax12a_arm_controller/share/ax12a_arm_controller/: package.sh  package.xml
install/interbotix_xsarm_control/lib/interbotix_xsarm_control/: bartender.py  ee_cartesian_trajectory.py  ee_pose_components.py  ee_pose_matrix_control.py  gripper_control.py  joint_current_control.py  joint_position_control.py  joint_pwm_control.py  (+1 more)
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
log/: latest_build  latest_list
src/: README_white_block_detector.md  X_PID.py  Y_PID.py  aruco_pose_estimator copy.py  graps_pipeline.py  vision_base_controller.py  vision_detection_viewer.py  vision_nav_coordinator.py  waypoint_publisher.py
src/ax12a_arm_controller/: README.md  setup.cfg  setup.py
src/ax12a_arm_controller/ax12a_arm_controller/: ax12a_arm_node.py  read_dxl_deg.py
src/ax12a_arm_controller/test/: arm_controller_demo.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/log/: latest_build
src/yolov10_inference/: setup.cfg  setup.py
src/yolov10_inference/yolov10_inference/: main.py  test.py  yolo_rgs.py
(+481 files in other folders)
