<?xml version="1.0"?>
<package format="3">
  <name>ax12a_arm_controller</name>
  <version>0.0.1</version>
  <description>5-DOF AX-12A arm driver using DYNAMIXEL SDK (ROS 2 Humble)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ros-humble-dynamixel-sdk</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>
